# swaddle

./: .gitignore  README.md  pyproject.toml
docker/: docker-compose.yml
scripts/: launch.sh
src/: config.py  main.py  run.py  system_hook.py
src/api/: apps.py  commands.py  deploy.py  files.py  group.py  scale.py  server.py
src/core/: apps.py  cluster.py  command.py  deployer.py  deploying.py  deployment_log.py  deployment_plugin.py  docker.py  group_data.py  infra_quality.py  scaler.py  server.py  service.py  ssh.py  ssh2.py  test.py  vault.py
src/dependency/: __init__.py  deployers.py  driver.py  manager.py
src/deploying/: app.py  deploy.py  docker_deployer.py  infra.py  server.py
src/deploying_plugin/: app.py  infra.py  plugins.py  server.py  stack_deployer.py  stack_enricher.py
src/model/: __init__.py  apps.py  cluster_log.py  commands.py  deploy.py  group.py  message.py  scale.py  server.py
src/storage/cache/: definition.py  store.py
