[tool.poetry]
name = "swaddle"
version = "0.1.0"
description = "Deploy without care"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.1"
loguru = "^0.5.3"
uvicorn = "^0.14.0"
redis = "^3.5.3"
gunicorn = "^20.1.0"
python-dotenv = "^0.17.1"
flake8 = "^3.9.2"
paramiko = "^2.7.2"
"delegator.py" = "^0.1.1"
lark-parser = "^0.11.3"
textparser = "^0.23.0"
barely-json = "^0.1.1"
jq = "^1.1.3"
docker-cli = "^1.0.2"
GitPython = "^3.1.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.2"
autoflake = "^1.4"
black = "^21.5b2"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
